# parse_pdf_ai

./: .gitignore  get_instruction.py  get_pdfs.py  main.py  parse_pdf.py  pyproject.toml  requirements.txt  run_model.py  view_json.py
